Bug 181908 - File selection dialog is shown two times when adding picture
Summary: File selection dialog is shown two times when adding picture
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-25 20:56 UTC by Jure Repinc
Modified: 2009-01-26 06:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2009-01-25 20:56:56 UTC
Version:           SVN (using KDE 4.2.0)
Compiler:          GCC 4.3.2 AMD64
OS:                Linux
Installed from:    Compiled From Sources

This happens with KPresenter from KOffice from SVN (r916636).

Steps to reproduce:
1. Create a new slide
2. Select a layout with picture placeholder
3. Double click on the image placeholder

Actual result:
After you select an image and click OK the file selector dialog is shown again (the title of the second dialog suggests that image options should be shown now)

Expected:
File selection dialog should be shown only once, the second dialog should contain image options.
Comment 1 T Zachmann 2009-01-26 06:02:52 UTC
SVN commit 916817 by zachmann:

o Fix: Bug 181908: File selection dialog is shown two times when adding
  picture.

Thanks to the bug squad :-)

BUG: 181908


 M  +2 -2      KPrPlaceholderTool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=916817