o Fix: Bug 181908: File selection dialog is shown two times when adding   picture.

Thanks to the bug squad :-)

BUG: 181908

svn path=/trunk/koffice/; revision=916817